--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </div>
       </div>
     </form>
+    <img id="map" src="./map.jpg" alt="" />
     <script src="dist/main.js"></script>
   </body>
 </html>
