--- a/index.html
+++ b/index.html
@@ -10,76 +10,86 @@
   </head>
   <body>
     <form id="form">
-      <div class="form_side">
-        <p>Введення данних для розрахунку</p>
-        <div>
-          <div class="form_group">
-            <label for="width">Ширина B, м:</label>
-            <input
-              id="width"
-              type="number"
-              name="width"
-              autocomplete="off"
-              required
-            />
-          </div>
-          <div class="form_group">
-            <label for="length">Довжина L, м:</label>
-            <input
-              id="length"
-              type="number"
-              step="6"
-              name="length"
-              autocomplete="off"
-              required
-            />
-          </div>
-          <div class="form_group">
-            <label for="height">Висота H, м:</label>
-            <input
-              id="height"
-              type="number"
-              step="0.1"
-              name="height"
-              autocomplete="off"
-              required
-            />
-          </div>
-          <div class="form_group">
-            <label for="snow_area">Сніговий район A:</label>
-            <select id="snow_area" name="snow_area" required="required">
-              <option disabled selected value="">Вибрати район</option>
-              <option value="1">1-й</option>
-              <option value="2">2-й</option>
-              <option value="3">3-й</option>
-              <option value="4">4-й</option>
-              <option value="5">5-й</option>
-              <option value="6">6-й</option>
-            </select>
-          </div>
-          <div class="btn">
-            <button>Розрахувати</button>
+      <div class="form_radio_group">
+        <p>
+          <input type="radio" name="type" value="1" /> Склад без опори
+          <input type="radio" name="type" value="2" /> Склад з опорою
+          <input type="radio" name="type" value="3" /> Навіс без опори
+          <input type="radio" name="type" value="3" /> Навіс з опорою
+        </p>
+      </div>
+      <div class="form">
+        <div class="form_side">
+          <p>Введення данних для розрахунку</p>
+          <div>
+            <div class="form_group">
+              <label for="width">Ширина B, м:</label>
+              <input
+                id="width"
+                type="number"
+                name="width"
+                autocomplete="off"
+                required
+              />
+            </div>
+            <div class="form_group">
+              <label for="length">Довжина L, м:</label>
+              <input
+                id="length"
+                type="number"
+                step="6"
+                name="length"
+                autocomplete="off"
+                required
+              />
+            </div>
+            <div class="form_group">
+              <label for="height">Висота H, м:</label>
+              <input
+                id="height"
+                type="number"
+                step="0.1"
+                name="height"
+                autocomplete="off"
+                required
+              />
+            </div>
+            <div class="form_group">
+              <label for="snow_area">Сніговий район A:</label>
+              <select id="snow_area" name="snow_area" required="required">
+                <option disabled selected value="">Вибрати район</option>
+                <option value="1">1-й</option>
+                <option value="2">2-й</option>
+                <option value="3">3-й</option>
+                <option value="4">4-й</option>
+                <option value="5">5-й</option>
+                <option value="6">6-й</option>
+              </select>
+            </div>
+            <div class="btn">
+              <button>Розрахувати</button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="form_side right">
-        <p>Результат розрахунку</p>
-        <div>
-          <div class="form_group">
-            <label for="square"> Площа забудови: </label>
-            <input type="text" id="square" readonly />
-          </div>
-          <div class="form_group">
-            <label for="work">Вартість робіт:</label>
-            <input type="text" id="work" readonly />
-          </div>
-          <div class="form_group">
-            <label for="out">Підсумкова вартість:</label>
-            <input type="text" id="out" readonly />
-          </div>
-          <div class="form_group">
-            <label for="square_meter">Вартість м2:</label>
-            <input type="text" id="square_meter" readonly />
+        <div class="form_side right">
+          <p>Результат розрахунку</p>
+          <div>
+            <div class="form_group">
+              <label for="square"> Площа забудови: </label>
+              <input type="text" id="square" readonly />
+            </div>
+            <div class="form_group">
+              <label for="work">Вартість робіт:</label>
+              <input type="text" id="work" readonly />
+            </div>
+            <div class="form_group">
+              <label for="out">Підсумкова вартість:</label>
+              <input type="text" id="out" readonly />
+            </div>
+            <div class="form_group">
+              <label for="square_meter">Вартість м2:</label>
+              <input type="text" id="square_meter" readonly />
+            </div>
           </div>
         </div>
       </div>
