--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <label for="type_1"> Склад без опори</label>
         </div>
         <div class="radio">
-          <input disabled id="type_2" type="radio" name="type" value="2" />
+          <input id="type_2" type="radio" name="type" value="2" />
           <label for="type_2"> Склад з опорою</label>
         </div>
         <div class="radio">
@@ -24,7 +24,7 @@
           <label for="type_3"> Навіс без опори</label>
         </div>
         <div class="radio">
-          <input disabled id="type_4" type="radio" name="type" value="4" />
+          <input id="type_4" type="radio" name="type" value="4" />
           <label for="type_4">Навіс з опорою</label>
         </div>
       </div>
